# PatTk

./: .gitignore  CMakeLists.txt  README.md  TODO
data/: 2d.hpp  FeatImage.hpp  Label.hpp  PatchBox.hpp  features.hpp  histogram.hpp  metric.hpp  vector.hpp
data/UnitTest/: FeatImage.cpp  LabelTest.cpp  RotationTest.cpp  RotationTest.cpp.bak  ScaleTest.cpp
experiment/: Clustering.cpp  ForestExp.cpp  GlobalClustering.cpp  Learning.cpp  RegionClustering.cpp  ShowTransform.cpp  Testing.cpp  TrainLabel.cpp  Training.cpp  TreeQuality.cpp  Verify.cpp  Vote.cpp  code_test.cpp  floodfill.cpp  leaf_test.cpp  nearest.cpp  pm_test.cpp  proptest.cpp
graph/: Bipartite.hpp  Graph.hpp  Trans.hpp  update.hpp
interfaces/: cv_interface.hpp  opencv_aux.hpp
interfaces/UnitTest/: IconList.cpp
memory/: LazyBuffer.hpp
opt/: BP.hpp  BP_CUDA.cu  BP_CUDA.h  DF.hpp  DT.hpp
opt/UnitTest/: matting.cpp
query/: Revolver.hpp  forest.hpp  kernel.hpp  tree.hpp
query/UnitTest/: LeafView.cpp
query/kernels/: EntropyKernel.hpp  SSLKernel.hpp  SimpleKernel.hpp
sample/: AlbumTest.cpp  CandView.cpp  FakeLabel.cpp  FeatTest.cpp  GraphBuilder.cpp  HeavyPatch.cpp  Inspect.cpp  PatchShift.cpp  Region.cpp  Stitching.cpp  TreeBuild.cpp  usage.cpp
utils/: cuda_aux.hpp
